# raytracer

./: CMakeLists.txt  LICENSE  README.md
src/: aac.c  aac.h  aap.c  aap.h  camera.c  camera.h  main.c  sphere.c  sphere.h  vec3f.c  vec3f.h
